Agregado datos de HTML

--- a/fragancia/templates/fragancia/perfumes.html
+++ b/fragancia/templates/fragancia/perfumes.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lista de Perfumes</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
 </head>
 <body>
-    <ul>
-      {% for Perfume in perfumes%}
-      <li>{{Perfume}}</li>
-      {%endfor%}
-    </ul>
+  <h1>Bienvenidos a todos</h1>
+  <h3>Perfumes comprados: </h3>
+  <ul>
+  {% for Perfume in perfumes %}
+    <li>{{Perfume}}</li>
+  {% endfor %}
+  </ul>
 </body>
 </html>
+
